Fixed test script in package.json Added custom styles for custom analysiswhen attempting large feature analysis Fixed bugs in config, added new fields to config Added updates to analysis workflow to run report on known watersheds when encountering a custom area thats too large

--- a/src/css/analysisPanel.styl
+++ b/src/css/analysisPanel.styl
@@ -216,6 +216,12 @@
       height 18px
       width 18px
 
+.custom-area-title.disabled
+  & input
+    padding-left 0
+  & .custom-area-title-edit
+    display none
+
 /* IE10+ CSS styles go here */
 // @media all and (-ms-high-contrast: none), (-ms-high-contrast: active)
 //   .analysis-tools
